table fix, include backface-visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 .table-row, .mainSlider .controls-row, .photographer-filter ul {
   display: table;
   height: 100%;
-  width: 100%;
   margin-bottom: 0;
 }
 
@@ -8434,17 +8433,6 @@ a:hover {
   z-index: 2;
 }
 
-.mainSlider .controls-inner {
-  /*position: absolute;
-			top: 0;
-			bottom: 0;
-			height: 100%;
-			width: 22px;
-			left: 100%;
-			margin-left: 30px;
-			top: 0;		*/
-}
-
 .mainSlider .slick-dots {
   margin-bottom: 0;
 }
@@ -8589,6 +8577,7 @@ a:hover {
 }
 
 .photographer-filter ul {
+  width: 100%;
   height: 31px;
 }
 
@@ -8726,8 +8715,6 @@ a:hover {
 .navbar-toggle {
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
   backface-visibility: hidden;
   right: 15px;
   top: 21px;
@@ -8747,8 +8734,6 @@ a:hover {
   cursor: pointer;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
@@ -8854,7 +8839,6 @@ a:hover {
 
 .navbar-toggle.active .line:nth-child(1) {
   -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
@@ -8872,7 +8856,6 @@ a:hover {
 
 .navbar-toggle.active .line:nth-child(3) {
   -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
