--- a/assets/scss/bootstrap-sass/bootstrap/mixins/_vendor-prefixes.scss
+++ b/assets/scss/bootstrap-sass/bootstrap/mixins/_vendor-prefixes.scss
@@ -193,7 +193,10 @@
 }
 @mixin transition-delay($transition-delay) {
   -webkit-transition-delay: $transition-delay;
-          transition-delay: $transition-delay;
+  -moz-transition-delay: $transition-delay;
+  -ms-transition-delay: $transition-delay;
+  -o-transition-delay: $transition-delay;
+		transition-delay: $transition-delay;
 }
 @mixin transition-duration($transition-duration...) {
   -webkit-transition-duration: $transition-duration;
